apps/api/overlays/test/apisix-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apisix-http-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: tn-don
      namespace: istio-gateway
      sectionName: tn-don-test
  hostnames:
    - set-in-overlay
  rules:
    - backendRefs:
        - name: don-api-apisix-gateway
          kind: Service
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apisix-admin-http-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: tn-don
      namespace: istio-gateway
      sectionName: tn-don-test
  hostnames:
    - set-in-overlay
  rules:
    - backendRefs:
        - name: don-api-apisix-admin
          kind: Service
          port: 9180
