apps/api/overlays/test/register-site-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: register-site-http-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: tn-don
      namespace: istio-gateway
      sectionName: tn-don-test
  hostnames:
    - set-in-overlay
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Access-Control-Allow-Origin
                value: "*"
              - name: Access-Control-Allow-Methods
                value: "GET, HEAD, OPTIONS"
      backendRefs:
        - name: register-site-svc
          kind: Service
          port: 4321
